Revision history for Bible::OBML::Gateway

{{$NEXT}}

2.06      2022-12-07 10:49:01-08:00 America/Los_Angeles
        - Minor parse additions to solve for CEV edge cases

2.05      2022-12-05 10:20:44-08:00 America/Los_Angeles
        - fetch() will attempt references that fail a Bible::Reference check
        - More precise parsing of: Joel 3 (CJB), John 7 (NCB), John 8 (NIV), Psalm 3 (ESV)
        - Fix over-stripping of para-text for 1 Chr 1 (NIV) and similiar

2.04      2022-03-30 18:03:00-07:00 America/Los_Angeles
        - b.inline-h3 filter and patch missing initial verse number

2.03      2022-03-30 09:02:46-07:00 America/Los_Angeles
        - Eliminate data-link prior to global regex-ing
        - Greater/lesser-than used as quotes fix
        - Remove hgroup, selah, b; clean footnote ref links
        - Fix "header_alt" deprecated tag to "sub_header" current
        - Several parsing edge-cases clean-up

2.02      2022-03-17 11:16:12-07:00 America/Los_Angeles
        - Fix to support Perl down to version 20
        - Minor documentation fixes

2.01      2022-03-16 20:57:32-07:00 America/Los_Angeles
        - Overhaul the entire module to be a bit smarter and more robust

1.12      2021-01-13 11:04:49-08:00 America/Los_Angeles
        - Override some minimum version reqs in dist.ini

1.11      2021-01-12 09:02:52-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.10      2020-07-20 10:04:37-07:00 America/Los_Angeles
        - Fix to handle UTF-8 on save() and load() operations

1.09      2020-07-17 17:00:09-07:00 America/Los_Angeles
        - Significant parsing improvements

1.08      2020-07-16 13:02:30-07:00 America/Los_Angeles
        - Additional parsing improvements

1.07      2020-07-15 17:59:11-07:00 America/Los_Angeles