@@ -52,5 +52,5 @@ untracked_files = ignore
 [Prereqs]
 exact            = 1.14
 exact::class     = 1.10
-Bible::Reference = 1.08
-Bible::OBML      = 2.03
+Bible::Reference = 1.15
+Bible::OBML      = 2.06
